--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_arm64.cfg
@@ -3,7 +3,7 @@
 ### Anaconda installer configuration.
 # Install in text mode.
 text --non-interactive
-harddrive --partition=nvme0n1p2 --dir=/
+harddrive --partition=/dev/disk/by-id/google-disk-installer-part2 --dir=/
 poweroff
 
 # Network configuration
