--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_0_sap.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_0_sap.cfg
@@ -237,6 +237,9 @@ sed -i'' -e '/PermitRootLogin prohibit-password/s/^.*/PermitRootLogin no/' /etc/
 # Update all packages.
 dnf -y update
 
+# Remove subscription manager which is a weak dependency of the SAP specific packages.
+dnf -y remove subscription-manager
+
 # If package update above involved a kernel package, it might not have properly set kernel command line
 # options, instead pulling from /proc/cmdline on the installer VM. Recreate boot loader options here.
 grub2-mkconfig
