google-cloud-cli -> google-cloud-sdk in rhel sap byos images

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_2_sap_byos.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_2_sap_byos.cfg
@@ -203,7 +203,7 @@ EOL
 dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
 
 # Install the Cloud SDK package.
-dnf install -y google-cloud-cli
+dnf install -y google-cloud-sdk
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
