Install python38 on rocky 8 optimized gcp arm64

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_arm64.cfg
@@ -55,6 +55,7 @@ dnf-automatic
 net-tools
 openssh-server
 python3
+python38
 rng-tools
 tar
 vim
@@ -97,6 +98,7 @@ vim
 %end
 
 %post
+dnf mark remove python38 || exit 1 # workaround for gcloud broken on el8 arm64
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-compute-engine]
 name=Google Compute Engine
