--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_4_sap.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_4_sap.cfg
@@ -30,7 +30,7 @@ udevadm control --reload
 udevadm trigger --settle
 tee -a /tmp/disk-config << EOM
 # build_installer.py will replace with the id of the install disk to avoid race conditions
-bootloader --boot-drive=/dev/disk/by-id/google-el-install-disk --timeout=0 --append="scsi_mod.use_blk_mq=Y"
+bootloader --boot-drive=/dev/disk/by-id/google-el-install-disk --timeout=0"
 # EFI partitioning, creates a GPT partitioned disk.
 clearpart --drives=/dev/disk/by-id/google-el-install-disk --all
 part /boot/efi --size=200 --fstype=efi --ondrive=/dev/disk/by-id/google-el-install-disk
