--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_9.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_9.cfg
@@ -57,42 +57,23 @@ python3
 rng-tools
 tar
 vim
--subscription-manager
--alsa-utils
--b43-fwcutter
--dmraid
--eject
 -gpm
 -irqbalance
 -microcode_ctl
--smartmontools
--aic94xx-firmware
--atmel-firmware
--b43-openfwwf
--bfa-firmware
--ipw2100-firmware
--ipw2200-firmware
--ivtv-firmware
+-linux-firmware-whence
+-linux-firmware
 -iwl100-firmware
 -iwl1000-firmware
--iwl3945-firmware
--iwl4965-firmware
+-iwl105-firmware
+-iwl135-firmware
+-iwl2000-firmware
+-iwl2030-firmware
+-iwl3160-firmware
 -iwl5000-firmware
 -iwl5150-firmware
--iwl6000-firmware
 -iwl6000g2a-firmware
 -iwl6050-firmware
--kernel-firmware
--libertas-usb8388-firmware
--ql2100-firmware
--ql2200-firmware
--ql23xx-firmware
--ql2400-firmware
--ql2500-firmware
--rt61pci-firmware
--rt73usb-firmware
--xorg-x11-drv-ati-firmware
--zd1211-firmware
+-iwl7260-firmware
 %end
 
 %post
