--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_accelerator.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_accelerator.cfg
@@ -184,20 +184,7 @@ dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
 dnf install -y google-cloud-cli
 
 # Install Accelerator components: nvidia and mellanox drivers
-dnf config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel8/x86_64/cuda-rhel8.repo
-dnf install -y gcc make kernel-devel kernel
-test -f /var/tmp/kernel-upgrade-done || sh -c 'touch /var/tmp/kernel-upgrade-done'
-curl -L -o nvidia.run https://us.download.nvidia.com/tesla/550.90.12/NVIDIA-Linux-x86_64-550.90.12.run
-chmod +x ./nvidia.run
-# DKMS - not suitable for prod
-./nvidia.run -s --kernel-source-path=/usr/src/kernels/$(uname -r)/
-dnf install -y createrepo gdb-headless libtool autoconf rpm-build kernel-rpm-macros patch automake wget lsof tk gcc-gfortran tcl pciutils
-wget https://content.mellanox.com/ofed/MLNX_OFED-23.10-3.2.2.0/MLNX_OFED_LINUX-23.10-3.2.2.0-rhel8.9-x86_64.tgz
-tar xf MLNX_OFED_LINUX-23.10-3.2.2.0-rhel8.9-x86_64.tgz
-cd MLNX_OFED_LINUX-23.10-3.2.2.0-rhel8.9-x86_64
-./mlnxofedinstall --guest --force --skip-distro-check --add-kernel-support
-cd ..
-rm -rf MLNX_OFED_LINUX-23.10-3.2.2.0-rhel8.9-x86_64 MLNX_OFED_LINUX-23.10-3.2.2.0-rhel8.9-x86_64.tgz
+# TODO: Add the repos and install the packages here when they are ready
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
