--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp_accelerator.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp_accelerator.cfg
@@ -204,6 +204,7 @@ repo_gpgcheck = false
 gpgcheck = false
 enabled = true
 skip_if_unavailable = true
+EOM
 
 dnf install -y open-gpu-kernel-modules-el9-x86_64
 dnf install -y nvidia-mellanox-ofed-driver-el9-x86_64
