--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_accelerator.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_accelerator.cfg
@@ -209,6 +209,7 @@ EOM
 
 dnf config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel8/x86_64/cuda-rhel8.repo
 dnf install -y open-gpu-kernel-modules-el8-x86_64
+dnf install -y nvidia-accelerated-graphics-driver
 dnf install -y nvidia-mellanox-ofed-driver-el8-x86_64
 
 # Send /root/anaconda-ks.cfg to our logs.
